Continued effort to create a lite/meta version of all openings
