# src/server/chess-api/swagger_server/models/__init__.py
@@ -5,5 +5,5 @@ from __future__ import absolute_import
 # import models into model package
 from swagger_server.models.move import Move
 from swagger_server.models.opening import Opening
-from swagger_server.models.opening_lite import OpeningLite
+from swagger_server.models.opening_meta import OpeningMeta
 from swagger_server.models.opening_variant import OpeningVariant
