# src/server/chess-api/swagger_server/models/opening_meta.py
@@ -10,20 +10,20 @@ import re  # noqa: F401,E501
 from swagger_server import util
 
 
-class OpeningLite(Model):
+class OpeningMeta(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
 
     def __init__(self, name: str=None, id: str=None, variant_names: List[str]=None):  # noqa: E501
-        """OpeningLite - a model defined in Swagger
+        """OpeningMeta - a model defined in Swagger
 
-        :param name: The name of this OpeningLite.  # noqa: E501
+        :param name: The name of this OpeningMeta.  # noqa: E501
         :type name: str
-        :param id: The id of this OpeningLite.  # noqa: E501
+        :param id: The id of this OpeningMeta.  # noqa: E501
         :type id: str
-        :param variant_names: The variant_names of this OpeningLite.  # noqa: E501
+        :param variant_names: The variant_names of this OpeningMeta.  # noqa: E501
         :type variant_names: List[str]
         """
         self.swagger_types = {
@@ -43,34 +43,34 @@ class OpeningLite(Model):
         self._variant_names = variant_names
 
     @classmethod
-    def from_dict(cls, dikt) -> 'OpeningLite':
+    def from_dict(cls, dikt) -> 'OpeningMeta':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The OpeningLite of this OpeningLite.  # noqa: E501
-        :rtype: OpeningLite
+        :return: The OpeningMeta of this OpeningMeta.  # noqa: E501
+        :rtype: OpeningMeta
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def name(self) -> str:
-        """Gets the name of this OpeningLite.
+        """Gets the name of this OpeningMeta.
 
         The human friendly name for the opening  # noqa: E501
 
-        :return: The name of this OpeningLite.
+        :return: The name of this OpeningMeta.
         :rtype: str
         """
         return self._name
 
     @name.setter
     def name(self, name: str):
-        """Sets the name of this OpeningLite.
+        """Sets the name of this OpeningMeta.
 
         The human friendly name for the opening  # noqa: E501
 
-        :param name: The name of this OpeningLite.
+        :param name: The name of this OpeningMeta.
         :type name: str
         """
         if name is None:
@@ -80,22 +80,22 @@ class OpeningLite(Model):
 
     @property
     def id(self) -> str:
-        """Gets the id of this OpeningLite.
+        """Gets the id of this OpeningMeta.
 
         The ECO id for the opening, e.g. E04  # noqa: E501
 
-        :return: The id of this OpeningLite.
+        :return: The id of this OpeningMeta.
         :rtype: str
         """
         return self._id
 
     @id.setter
     def id(self, id: str):
-        """Sets the id of this OpeningLite.
+        """Sets the id of this OpeningMeta.
 
         The ECO id for the opening, e.g. E04  # noqa: E501
 
-        :param id: The id of this OpeningLite.
+        :param id: The id of this OpeningMeta.
         :type id: str
         """
         if id is None:
@@ -107,20 +107,20 @@ class OpeningLite(Model):
 
     @property
     def variant_names(self) -> List[str]:
-        """Gets the variant_names of this OpeningLite.
+        """Gets the variant_names of this OpeningMeta.
 
 
-        :return: The variant_names of this OpeningLite.
+        :return: The variant_names of this OpeningMeta.
         :rtype: List[str]
         """
         return self._variant_names
 
     @variant_names.setter
     def variant_names(self, variant_names: List[str]):
-        """Sets the variant_names of this OpeningLite.
+        """Sets the variant_names of this OpeningMeta.
 
 
-        :param variant_names: The variant_names of this OpeningLite.
+        :param variant_names: The variant_names of this OpeningMeta.
         :type variant_names: List[str]
         """
         if variant_names is None:
